# Multi-drone-behaviors

drone_interception_gazebo/: launcher_gazebo.sh  main_launcher1.sh  mission_launcher.sh
drone_interception_gazebo/configs/drone112/: base_local_planner_params.yaml  quadrotor_pid_controller_config.yaml
drone_interception_gazebo/configs/gazebo_files/launch/: drone_interception.launch
drone_interception_gazebo/configs/gazebo_files/worlds/: perimeter.world
quadrotor_motion_with_pid_control/package/: CMakeLists.txt  README.md  package.xml
quadrotor_motion_with_pid_control/package/launch/: quadrotor_motion_with_pid_control.launch
quadrotor_motion_with_pid_control/package/src/include/: behavior_follow_path.h  behavior_follow_target_with_pid_control.h  behavior_get_close_to_target_with_pid_control.h  behavior_keep_hovering_with_pid_control.h  behavior_keep_look_at_target_with_pid_control.h  behavior_keep_moving_with_pid_control.h  behavior_keep_target_altitude_with_pid_control.h  behavior_land_with_pid.h  behavior_move_away_from_robot_with_pid_control.h  behavior_quadrotor_pid_motion_control.h  behavior_quadrotor_pid_thrust_control.h  behavior_reach_target_altitude_with_pid_control.h  behavior_rotate_with_pid_control.h  behavior_take_a_look_at_target_with_pid_control.h  behavior_take_off_with_pid.h
quadrotor_motion_with_pid_control/package/src/source/: behavior_follow_path.cpp  behavior_follow_target_with_pid_control.cpp  behavior_get_close_to_target_with_pid_control.cpp  behavior_keep_hovering_with_pid_control.cpp  behavior_keep_look_at_target_with_pid_control.cpp  behavior_keep_moving_with_pid_control.cpp  behavior_keep_target_altitude_with_pid_control.cpp  behavior_land_with_pid.cpp  behavior_move_away_from_robot_with_pid_control.cpp  behavior_quadrotor_pid_motion_control.cpp  behavior_quadrotor_pid_thrust_control.cpp  behavior_reach_target_altitude_with_pid_control.cpp  behavior_rotate_with_pid_control.cpp  behavior_take_a_look_at_target_with_pid_control.cpp  behavior_take_off_with_pid.cpp
quadrotor_motion_with_pid_control/subpackages/path_tracker/: README.md
quadrotor_motion_with_pid_control/subpackages/path_tracker/path_tracker_process/: CMakeLists.txt  package.xml
quadrotor_motion_with_pid_control/subpackages/path_tracker/path_tracker_process/launch/: path_tracker_process.launch
quadrotor_motion_with_pid_control/subpackages/path_tracker/path_tracker_process/src/include/: path_tracker_process.h
quadrotor_motion_with_pid_control/subpackages/path_tracker/path_tracker_process/src/source/: path_tracker_process.cpp  path_tracker_process_main.cpp
quadrotor_motion_with_pid_control/subpackages/path_tracker/path_tracker_process/src/test/: path_tracker_tester.cpp
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/: README.md
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller/: CMakeLists.txt  package.xml
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller/src/include/: altitude_controller.h  pid_control.h  position_controller.h  speed_controller.h  yaw_controller.h
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller/src/source/: altitude_controller.cpp  pid_control.cpp  position_controller.cpp  speed_controller.cpp  yaw_controller.cpp
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller_process/: CMakeLists.txt  package.xml
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller_process/launch/: quadrotor_pid_controller_process.launch
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller_process/src/include/: quadrotor_pid_controller_process.h
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller_process/src/source/: quadrotor_pid_controller_process.cpp  quadrotor_pid_controller_process_main.cpp
quadrotor_motion_with_pid_control/subpackages/quadrotor_pid_controller/quadrotor_pid_controller_process/src/test/: new_quadrotor_pid_controller_tester.cpp  old_quadrotor_pid_controller_tester.cpp
quadrotor_motion_with_pid_control/subpackages/thrust_controller/: CMakeLists.txt  package.xml
quadrotor_motion_with_pid_control/subpackages/thrust_controller/launch/: thrust_controller.launch
quadrotor_motion_with_pid_control/subpackages/thrust_controller/src/include/: thrust_controller.hpp
quadrotor_motion_with_pid_control/subpackages/thrust_controller/src/source/: thrust_controller.cpp  thrust_controller_node.cpp
