<?xml version="1.0"?>
<package>
  <name>quadrotor_motion_with_pid_control</name>
  <version>0.1.0</version>
  <description>Quadrotor PID control system of behaviors</description>

  <maintainer email="rodelgo7al@gmail.com">Alberto Rodelgo Perales</maintainer>

  <license>BSD-3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>behavior_execution_manager</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>aerostack_msgs</build_depend>
  <build_depend>behavior_execution_manager_msgs</build_depend>
  <build_depend>ros_utils_lib</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>behavior_execution_manager</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>aerostack_msgs</run_depend>
  <run_depend>behavior_execution_manager_msgs</run_depend>
  <run_depend>ros_utils_lib</run_depend>
  <run_depend>tf</run_depend>

</package>
