<?xml version="1.0"?>
<package format="2">
	<name>thrust_controller</name>
	<version>0.0.0</version>
	<description>A new version of Thrust controller more intuitive</description>

	<maintainer email="miguel.fernandez.cortizas@upm.es">Miguel Fernandez</maintainer>

	<license>TODO</license> 
	<buildtool_depend>catkin</buildtool_depend>

	<depend>roscpp</depend>
	<depend>std_msgs</depend>
	<depend>sensor_msgs</depend> 
	<depend>geometry_msgs</depend>
	<depend>mavros_msgs</depend>
	<depend>robot_process</depend>
	<depend>mav_msgs</depend>
	<depend>tf</depend>
	<depend>ros_utils_lib</depend>
  	<depend>yaml-cpp</depend>

</package>
