<package>
	<name>path_tracker_process</name>
	<version>1.0.0</version>
	<description>
    		This package is path_tracker_process.
	</description>
	<author email="psantofimia@gmail.com">Pablo Santofimia Ruiz</author>
	<author email="rodelgo7al@gmail.com">Alberto Rodelgo Perales</author>
	<maintainer email="rodelgo7al@gmail.com">Alberto Rodelgo Perales</maintainer>
  	<license>BSD-3</license>

    <buildtool_depend>catkin</buildtool_depend>
    
    <build_depend>roscpp</build_depend>
    <build_depend>robot_process</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>yaml-cpp</build_depend>
    <build_depend>lib_cvgutils</build_depend>

    <run_depend>geometry_msgs</run_depend>
	<run_depend>roscpp</run_depend>
	<run_depend>robot_process</run_depend>
	<run_depend>yaml-cpp</run_depend>
	<run_depend>lib_cvgutils</run_depend>



</package>